--- a/color game/colorGame.css
+++ b/color game/colorGame.css
@@ -1,9 +1,18 @@
 body {
   background-color: #232323;
+  margin: 0;
+  font-family: 'Montserrat', 'Avenir';
 }
 
 h1 {
   color: white;
+  line-height: 1.1;
+  font-weight: normal;
+  text-align: center;
+  background: steelblue;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 20px 0px;
 }
 
 .square {
@@ -12,11 +21,24 @@ h1 {
   padding-bottom: 30%;
   float: left;
   margin: 1.66%;
+  border-radius: 15%;
+  transition: background 0.6s;
+  -webkit-transition: background 0.6s;
+  -moz-transition: background 0.6s;
+}
+
+#message {
+  display: inline-block;
+  width: 20%;
 }
 
 #container {
   margin: 0 auto;
   max-width: 600px;
+}
+
+#colorDisplay {
+  font-size: 200%;
 }
 
 #stripe {
@@ -27,5 +49,26 @@ h1 {
 }
 
 .selected {
-  background: blue;
+  color: white;
+  background: steelblue;
+}
+
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700%;
+  color: steelblue;
+  letter-spacing: 1px;
+  font-size: inherit;
+  transition: all 0.3s;
+  -webkit-transition: background 0.6s;
+  -moz-transition: background 0.6s;
+}
+
+
+button:hover {
+  color: white;
+  background: steelblue;
 }
